Add a little more documentation.

--- a/threatexchange/templates/query.html
+++ b/threatexchange/templates/query.html
@@ -223,7 +223,8 @@
 </style>
 
 <p>
-Query Facebook's ThreatExchange for information.
+Query Facebook's ThreatExchange for information. Scroll down results to acquire
+more results if there are any.
 </p>
 <div class="content_box">
     <h3 class="titleheader">
