TAXII: TAXII Poll Import Preview

--- a/taxii_service/templates/taxii_agent_form.html
+++ b/taxii_service/templates/taxii_agent_form.html
@@ -9,6 +9,7 @@
 <div id="taxii_service" width="100%" style="text-align: center">
 
 	<h1 id="current_state">Poll for TAXII Messages</h1>
+	<a href="#" id="view_saved">View Saved Poll Results</a>
 
 	<div id="taxii-loader" style="text-align: center; display: none;">
 		<img src="/images/chasingloader.gif" width="75px;"/>
