Add links to TX developer documentation.

--- a/threatexchange/templates/query.html
+++ b/threatexchange/templates/query.html
@@ -224,7 +224,7 @@
 
 <p>
 Query Facebook's ThreatExchange for information. Scroll down results to acquire
-more results if there are any.
+more results if there are any. Documentation can be found <a href="https://developers.facebook.com/docs/threat-exchange/" target="new">here</a>.
 </p>
 <div class="content_box">
     <h3 class="titleheader">
