--- a/threatexchange/templates/threatexchange_export_indicator_tab.html
+++ b/threatexchange/templates/threatexchange_export_indicator_tab.html
@@ -36,7 +36,8 @@
             <p>
             Remember to properly set your Privacy Type, Privacy Members, and
             Share Level! Hit the "+" in the areas to the right to automatically
-            add that group/member to the Privacy Members list.
+            add that group/member to the Privacy Members list. Documentation can
+            be found <a href="https://developers.facebook.com/docs/threat-exchange/" target="new">here</a>.
             </p>
             <table class="export_builder">
                 <tr id="indicator_row">
