--- a/threatexchange/templates/query.html
+++ b/threatexchange/templates/query.html
@@ -265,7 +265,7 @@ more results if there are any. Documentation can be found <a href="https://devel
                     <input type="checkbox" id="strict" name="strict" />
                 </td>
             </tr>
-            <tr id="status_row">
+            <tr id="indicator_type_row">
                 <td>
                     Indicator Type
                 </td>
