--- a/taxii_service/templates/resources/taxii_style_tag.html
+++ b/taxii_service/templates/resources/taxii_style_tag.html
@@ -8,8 +8,12 @@
 	}
 	#taxii_form_table select {
 		max-width: 100%;
-		width: 350px;
-		height: 75px;
+		width: 300px;
+		margin-bottom: 10px;
+	}
+	#taxii_form_table input {
+		max-width: 100%;
+		width: 300px;
 		margin-bottom: 10px;
 	}
 	.taxii-table {
