--- a/taxii_service/templates/taxii_service_nav_items.html
+++ b/taxii_service/templates/taxii_service_nav_items.html
@@ -3,13 +3,5 @@
     <a href="{% url 'taxii_service.views.taxii_poll' %}">TAXII Agent</a>
 </li>
 <li class='mmenu_item'>
-    <a href id="new-standards" class="dialogClick" dialog="new-standards" persona="new" title="Import STIX Document">STIX Import</a>
+    <a href="{% url 'taxii_service.views.stix_upload' %}">STIX Upload</a>
 </li>
-
-<script>
-    $(document).ready(function() {
-        stdDialog("new-standards", {title: "STIX Document"}, {
-            new: { open: file_upload_dialog, submit: defaultSubmit }
-        });
-    });
-</script>
